--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>My first ever website</h1>
     <h3>Look Mama!!! I can push to github</h3>
+    <p>Felling Happy Now</p>
+    <p>I am a ghost</p>
 </body>
 </html>
